// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderSection — body slots (intro/paragraphs/bullets) > bullets — plain (unordered list) 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    
    
    
    
    
    <ul class="codex-editorial-list"><li>First bullet</li><li>Second bullet with <a href="/products/rfid-cards/">link</a></li></ul>
    
    
    
    
  </section>"
`;

exports[`renderSection — body slots (intro/paragraphs/bullets) > bullets — workflow title (ordered list with step-list class) 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Implementation steps</h2>
    
    
    
    
    
    
    
    
    <ol class="codex-editorial-step-list">
      <li class="codex-editorial-step">
            <span class="codex-editorial-step-index">Step 1</span>
            <div class="codex-editorial-step-copy">Discovery</div>
          </li><li class="codex-editorial-step">
            <span class="codex-editorial-step-index">Step 2</span>
            <div class="codex-editorial-step-copy">Encoding pilot</div>
          </li><li class="codex-editorial-step">
            <span class="codex-editorial-step-index">Step 3</span>
            <div class="codex-editorial-step-copy">Production rollout</div>
          </li>
    </ol>
    
    
    
    
  </section>"
`;

exports[`renderSection — body slots (intro/paragraphs/bullets) > intro only 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    <p class="codex-editorial-section-intro">An intro paragraph for the test.</p>
    
    
    
    
    
    
    
    
    
    
    
    
  </section>"
`;

exports[`renderSection — body slots (intro/paragraphs/bullets) > paragraphs with link + citation 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    <p>First production-style paragraph.</p><p>Second paragraph with <a href="/products/rfid-tags/">an inline link</a> and a citation <sup class="codex-citation"><a href="#sources-1" aria-label="Citation 1, see Sources block">[1]</a></sup>.</p>
    
    
    
    
    
    
    
    
    
  </section>"
`;

exports[`renderSection — callout > minimal: no href 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    
    
    
    
    
    
    
    
    
    <aside class="codex-editorial-callout">
        <strong>Note</strong>
        <p>Inline callout copy.</p>
        
      </aside>
  </section>"
`;

exports[`renderSection — callout > typical: with href, inline link, citation 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    
    
    
    
    
    
    
    
    
    <aside class="codex-editorial-callout">
        <strong>Note</strong>
        <p>Use NTAG215 for 80%+ of NFC use cases — see <a href="/guides/ntag-chips/">our guide</a> <sup class="codex-citation"><a href="#sources-3" aria-label="Citation 3, see Sources block">[3]</a></sup>.</p>
        <a href="/products/nfc-stickers/" class="codex-editorial-callout__link">Learn more <span aria-hidden="true">→</span></a>
      </aside>
  </section>"
`;

exports[`renderSection — checklist > minimal: 1 item 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    
    
    
    
    
    
    <ul class="codex-editorial-checklist" role="list">
        <li class="codex-editorial-checklist__item">
              <span class="codex-editorial-checklist__mark" aria-hidden="true">✓</span>
              <span class="codex-editorial-checklist__text">Confirm chip</span>
            </li>
      </ul>
    
    
    
  </section>"
`;

exports[`renderSection — checklist > typical: link + citation marker 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    
    
    
    
    
    
    <ul class="codex-editorial-checklist" role="list">
        <li class="codex-editorial-checklist__item">
              <span class="codex-editorial-checklist__mark" aria-hidden="true">✓</span>
              <span class="codex-editorial-checklist__text">Confirm chip family (MIFARE Classic, DESFire, NTAG)</span>
            </li><li class="codex-editorial-checklist__item">
              <span class="codex-editorial-checklist__mark" aria-hidden="true">✓</span>
              <span class="codex-editorial-checklist__text">Order <a href="/contact/">a sample</a> before bulk run</span>
            </li><li class="codex-editorial-checklist__item">
              <span class="codex-editorial-checklist__mark" aria-hidden="true">✓</span>
              <span class="codex-editorial-checklist__text">Lock artwork by deadline <sup class="codex-citation"><a href="#sources-1" aria-label="Citation 1, see Sources block">[1]</a></sup></span>
            </li>
      </ul>
    
    
    
  </section>"
`;

exports[`renderSection — comparePanel > minimal: default headings 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    
    
    
    <div class="codex-editorial-compare" role="group" aria-label="Before vs after comparison">
        <div class="codex-editorial-compare__col codex-editorial-compare__col--before">
          <h3>Before</h3>
          <ul class="codex-editorial-list">
            <li>Manual scan</li>
          </ul>
        </div>
        <div class="codex-editorial-compare__col codex-editorial-compare__col--after">
          <h3>After</h3>
          <ul class="codex-editorial-list">
            <li>UHF portal</li>
          </ul>
        </div>
      </div>
    
    
    
    
    
    
  </section>"
`;

exports[`renderSection — comparePanel > typical: custom headings + inline link 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    
    
    
    <div class="codex-editorial-compare" role="group" aria-label="Before vs after comparison">
        <div class="codex-editorial-compare__col codex-editorial-compare__col--before">
          <h3>Without RFID</h3>
          <ul class="codex-editorial-list">
            <li>Manual scan</li><li>Bottlenecked at receiving dock</li>
          </ul>
        </div>
        <div class="codex-editorial-compare__col codex-editorial-compare__col--after">
          <h3>With RAIN RFID</h3>
          <ul class="codex-editorial-list">
            <li>UHF portal at the loading bay</li><li>Inventory accuracy <a href="/products/rfid-tags/">a link</a></li>
          </ul>
        </div>
      </div>
    
    
    
    
    
    
  </section>"
`;

exports[`renderSection — comparePanel > with citations: [^N] markers rewrite into sup 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    
    
    
    <div class="codex-editorial-compare" role="group" aria-label="Before vs after comparison">
        <div class="codex-editorial-compare__col codex-editorial-compare__col--before">
          <h3>Before</h3>
          <ul class="codex-editorial-list">
            <li>Manual scan with citation <sup class="codex-citation"><a href="#sources-1" aria-label="Citation 1, see Sources block">[1]</a></sup></li>
          </ul>
        </div>
        <div class="codex-editorial-compare__col codex-editorial-compare__col--after">
          <h3>After</h3>
          <ul class="codex-editorial-list">
            <li>Tagged read <sup class="codex-citation"><a href="#sources-2" aria-label="Citation 2, see Sources block">[2]</a></sup> versus baseline</li>
          </ul>
        </div>
      </div>
    
    
    
    
    
    
  </section>"
`;

exports[`renderSection — dataHighlight > minimal: no source 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    
    <aside class="codex-editorial-data-highlight" role="figure" aria-label="Read range">
        <span class="codex-editorial-data-highlight__value">30 m</span>
        <strong class="codex-editorial-data-highlight__heading">Read range</strong>
        <p class="codex-editorial-data-highlight__text">Fixed UHF portals reach 30 m line-of-sight.</p>
        
      </aside>
    
    
    
    
    
    
    
    
  </section>"
`;

exports[`renderSection — dataHighlight > typical: with source + citation marker 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    
    <aside class="codex-editorial-data-highlight" role="figure" aria-label="Read range">
        <span class="codex-editorial-data-highlight__value">30 m</span>
        <strong class="codex-editorial-data-highlight__heading">Read range</strong>
        <p class="codex-editorial-data-highlight__text">Fixed UHF portals reach 30 m line-of-sight, citation <sup class="codex-citation"><a href="#sources-1" aria-label="Citation 1, see Sources block">[1]</a></sup>.</p>
        <cite class="codex-editorial-data-highlight__source">Source: GS1 EPC HF/UHF gen 2 reference.</cite>
      </aside>
    
    
    
    
    
    
    
    
  </section>"
`;

exports[`renderSection — featureGrid > minimal: 1 glyph icon 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    
    
    <div class="codex-editorial-feature-grid">
        <article class="codex-editorial-feature">
              <span class="codex-editorial-feature__icon" aria-hidden="true">🎟️</span>
              <h3 class="codex-editorial-feature__title">Event credentials</h3>
              <p class="codex-editorial-feature__text">Quick-issue wristbands.</p>
            </article>
      </div>
    
    
    
    
    
    
    
  </section>"
`;

exports[`renderSection — featureGrid > typical with citations 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    
    
    <div class="codex-editorial-feature-grid">
        <article class="codex-editorial-feature">
              <span class="codex-editorial-feature__icon" aria-hidden="true">🎟️</span>
              <h3 class="codex-editorial-feature__title">Event credentials</h3>
              <p class="codex-editorial-feature__text">Quick-issue wristbands. See <sup class="codex-citation"><a href="#sources-1" aria-label="Citation 1, see Sources block">[1]</a></sup>.</p>
            </article><article class="codex-editorial-feature">
              <img class="codex-editorial-feature__icon codex-editorial-feature__icon--svg" src="/landing-images/icons/industries/healthcare.svg" alt="" loading="lazy" decoding="async" width="48" height="48" aria-hidden="true" />
              <h3 class="codex-editorial-feature__title">Asset tags</h3>
              <p class="codex-editorial-feature__text">RAIN RFID for hospital fleets.</p>
            </article><article class="codex-editorial-feature">
              <img class="codex-editorial-feature__icon codex-editorial-feature__icon--svg" src="https://example.com/icon.svg" alt="" loading="lazy" decoding="async" width="48" height="48" aria-hidden="true" />
              <h3 class="codex-editorial-feature__title">External icon</h3>
              <p class="codex-editorial-feature__text">Hosted CDN path with <a href="/products/rfid-tags/">an inline link</a>.</p>
            </article><article class="codex-editorial-feature">
              <img class="codex-editorial-feature__icon codex-editorial-feature__icon--svg" src="data:image/svg+xml;base64,PHN2Zy8+" alt="" loading="lazy" decoding="async" width="48" height="48" aria-hidden="true" />
              <h3 class="codex-editorial-feature__title">Inline data URL</h3>
              <p class="codex-editorial-feature__text">Data-URL icon source.</p>
            </article>
      </div>
    
    
    
    
    
    
    
  </section>"
`;

exports[`renderSection — featureGrid > typical: mixed icons (glyph + abs path + https + data:image/) 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    
    
    <div class="codex-editorial-feature-grid">
        <article class="codex-editorial-feature">
              <span class="codex-editorial-feature__icon" aria-hidden="true">🎟️</span>
              <h3 class="codex-editorial-feature__title">Event credentials</h3>
              <p class="codex-editorial-feature__text">Quick-issue wristbands.</p>
            </article><article class="codex-editorial-feature">
              <img class="codex-editorial-feature__icon codex-editorial-feature__icon--svg" src="/landing-images/icons/industries/healthcare.svg" alt="" loading="lazy" decoding="async" width="48" height="48" aria-hidden="true" />
              <h3 class="codex-editorial-feature__title">Asset tags</h3>
              <p class="codex-editorial-feature__text">RAIN RFID for hospital fleets.</p>
            </article><article class="codex-editorial-feature">
              <img class="codex-editorial-feature__icon codex-editorial-feature__icon--svg" src="https://example.com/icon.svg" alt="" loading="lazy" decoding="async" width="48" height="48" aria-hidden="true" />
              <h3 class="codex-editorial-feature__title">External icon</h3>
              <p class="codex-editorial-feature__text">Hosted CDN path with <a href="/products/rfid-tags/">an inline link</a>.</p>
            </article><article class="codex-editorial-feature">
              <img class="codex-editorial-feature__icon codex-editorial-feature__icon--svg" src="data:image/svg+xml;base64,PHN2Zy8+" alt="" loading="lazy" decoding="async" width="48" height="48" aria-hidden="true" />
              <h3 class="codex-editorial-feature__title">Inline data URL</h3>
              <p class="codex-editorial-feature__text">Data-URL icon source.</p>
            </article>
      </div>
    
    
    
    
    
    
    
  </section>"
`;

exports[`renderSection — image > minimal: src + alt 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    <figure class="codex-editorial-figure"><img src="/landing-images/heroes/test.jpg" alt="Test image alt text." width="1200" height="675" loading="lazy" decoding="async"></figure>
    
    
    
    
    
    
    
    
    
    
  </section>"
`;

exports[`renderSection — layout attribute > split 1`] = `
"<section class="codex-editorial-section" data-section-layout="split" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    <p>Paragraph for split layout.</p>
    
    
    
    
    
    
    
    
    
  </section>"
`;

exports[`renderSection — layout attribute > split-reverse 1`] = `
"<section class="codex-editorial-section" data-section-layout="split-reverse" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    <p>Paragraph for split-reverse layout.</p>
    
    
    
    
    
    
    
    
    
  </section>"
`;

exports[`renderSection — statBar > minimal: 1 item 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    <ul class="codex-editorial-stat-bar" role="list">
        <li class="codex-editorial-stat-bar__item">
              <span class="codex-editorial-stat-bar__value">99%</span>
              <span class="codex-editorial-stat-bar__label">Read rate</span>
            </li>
      </ul>
    
    
    
    
    
    
    
    
    
    
    
  </section>"
`;

exports[`renderSection — statBar > typical: 3 items 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    <ul class="codex-editorial-stat-bar" role="list">
        <li class="codex-editorial-stat-bar__item">
              <span class="codex-editorial-stat-bar__value">99%</span>
              <span class="codex-editorial-stat-bar__label">Read rate</span>
            </li><li class="codex-editorial-stat-bar__item">
              <span class="codex-editorial-stat-bar__value">&lt;50ms</span>
              <span class="codex-editorial-stat-bar__label">Per-tag latency</span>
            </li><li class="codex-editorial-stat-bar__item">
              <span class="codex-editorial-stat-bar__value">10 m</span>
              <span class="codex-editorial-stat-bar__label">Read range</span>
            </li>
      </ul>
    
    
    
    
    
    
    
    
    
    
    
  </section>"
`;

exports[`renderSection — table-only > table inside section 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    
    
    
    
    
    
    
    <div class="codex-scroll-region codex-editorial-table-wrap" tabindex="0" role="region" aria-label="Comparison table — scroll horizontally to see more columns">
    <table class="codex-editorial-table" data-sortable="true">
      <thead><tr><th scope="col" ><span class="codex-th-label">Chip</span></th><th scope="col" data-sort-col="1" aria-sort="none" tabindex="0" role="columnheader button"><span class="codex-th-label">Memory</span><span class="codex-th-indicator" aria-hidden="true"></span></th></tr></thead>
      <tbody><tr><th scope="row">NTAG213</th><td>144 B</td></tr><tr><th scope="row">NTAG215</th><td>504 B</td></tr><tr><th scope="row">NTAG216</th><td>888 B</td></tr></tbody>
    </table>
  </div>
    
    
  </section>"
`;

exports[`renderSection — testimonial > minimal: text + source 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    
    
    
    
    
    
    
    
    <figure class="codex-editorial-testimonial">
        <blockquote><p>Cut receiving time by 40%.</p></blockquote>
        <figcaption>— Operations Director, retail DC</figcaption>
      </figure>
    
  </section>"
`;

exports[`renderSection — timeline > minimal: 1 step 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    
    
    
    
    <ol class="codex-editorial-timeline">
        <li class="codex-editorial-timeline__item">
              <span class="codex-editorial-timeline__label">Day 1</span>
              <p class="codex-editorial-timeline__text">Kickoff.</p>
            </li>
      </ol>
    
    
    
    
    
  </section>"
`;

exports[`renderSection — timeline > typical: 3 steps + citation + inline link 1`] = `
"<section class="codex-editorial-section" id="test-section-id">
    <h2>Test variant block</h2>
    
    
    
    
    
    
    
    <ol class="codex-editorial-timeline">
        <li class="codex-editorial-timeline__item">
              <span class="codex-editorial-timeline__label">Week 1</span>
              <p class="codex-editorial-timeline__text">Audit &amp; artwork.</p>
            </li><li class="codex-editorial-timeline__item">
              <span class="codex-editorial-timeline__label">Week 3</span>
              <p class="codex-editorial-timeline__text">Encoding pilot batch <sup class="codex-citation"><a href="#sources-2" aria-label="Citation 2, see Sources block">[2]</a></sup>.</p>
            </li><li class="codex-editorial-timeline__item">
              <span class="codex-editorial-timeline__label">Week 6</span>
              <p class="codex-editorial-timeline__text">Production <a href="/products/rfid-cards/">run</a>.</p>
            </li>
      </ol>
    
    
    
    
    
  </section>"
`;
